--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </nav>
 
 <section class="principal">
-    <img src="img/" alt="" width="100%" height="560px">
+    <img src="img/foondov.png" alt="" width="100%" height="560px">
 
 
 </section>
